tests/samples/negative/control_flow/for_in_protocol_has_next_shared_receiver.ax
module for_in_protocol_has_next_shared_receiver;

struct BadIter {
    value: i32;
}

impl BadIter {
    fn has_next(self: &BadIter) -> bool {
        return self.value > 0;
    }

    fn next(self: &mut BadIter) -> i32 {
        return self.value;
    }
}

fn main() -> i32 {
    let iter: BadIter = BadIter { value: 1 };
    for value in iter {
        return value;
    }
    return 0;
}
